<resources>
    <string name="app_name">MyForum</string>
    <string name="sing_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="create_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="fullName">FullName</string>
    <string name="sign_up">Sing Up</string>
    <string name="have_account">Already have account? sing in here</string>
    <string name="access_token">access token</string>
    <string name="refresh_token">refresh token</string>
</resources>