<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".register.RegisterActivity">

    <TextView
        android:id="@+id/tv_makeAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_account"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_makeAccount"
        android:background="#30ffffff"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="20dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_username"
        android:background="#30ffffff"
        android:hint="@string/fullName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_account_box"
        android:drawablePadding="20dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_fullName"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:text="@string/sign_up"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tv_haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signUp"
        android:text="@string/have_account"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

</RelativeLayout>